# mstv-production-os

./: .env.local.example  .gitignore  capacitor.config.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx  pwa-registration.tsx  react-dom.d.ts
components/events/: EventEditorModal.tsx
components/ui/: MstvDatePicker.tsx  MstvModalSurface.tsx  MstvPopover.tsx  badge.tsx  button.tsx  card.tsx
lib/: calendar-markers.ts  supabase.ts  ui-layers.ts  ui-motion.ts  ui-radii.ts  use-native-keyboard-visibility.ts
lib/events/: display.ts  editor.ts  visibility.ts
public/: manifest.webmanifest  sw.js
scripts/: debug-quote-pdf.mjs  test-quote-fixtures.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
supabase/.temp/: linked-project.json  pooler-url  project-ref
supabase/migrations/: 001_initial_schema.sql  002_event_option_items.sql  003_event_links_stream_key.sql  004_event_documents.sql  005_event_document_groups.sql  008_event_options_assigned_team_member.sql  009_event_link_entries.sql  010_optional_event_times.sql  011_event_activity_log.sql  012_soft_delete_events.sql  013_auth_profiles.sql  014_profiles_admin_management.sql  015_enable_realtime.sql  016_fix_profile_role_updates.sql  017_simplify_profile_roles.sql  018_team_member_collaborator_fields.sql  019_event_options_completed_by.sql  020_event_options_completed_by_label.sql  021_quote_import_metadata.sql  022_creator_based_permissions.sql  038_tasks_mvp.sql  (+39 more)
(+21 files in other folders)
