[package]
name = "mstv-production-os"
version = "0.1.0"
description = "MSTV Production OS desktop shell"
authors = ["Mon Studio TV"]
edition = "2021"

[lib]
name = "mstv_production_os_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
